--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@babel/core": "^7.5.0",
     "@babel/preset-env": "^7.5.2",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-loader": "^15.7.0",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.0.5",
     "webpack": "^4.35.3",
