--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "index.js",
   "dependencies": {
     "vue": "^2.6.10",
+    "vue-router": "^3.0.7",
     "vuetify": "^1.5.16"
   },
   "devDependencies": {
