--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ db.password=postgres
 db.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 db.hibernate.show_sql=true
 db.entitymanager.packages.to.scan=ua.iFood.entity
-db.hibernate.hbm2ddl.auto=create
+db.hibernate.hbm2ddl.auto=update
