--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "main": "index.js",
   "dependencies": {
+    "es6-promise": "^4.2.8",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
-    "vuetify": "^1.5.16"
+    "vuetify": "^1.5.16",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
