Implemented ManyToOne EatenFood to Food Implemented storing EatenFood to db

--- a/pom.xml
+++ b/pom.xml
@@ -100,8 +100,9 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.3-1100-jdbc41</version>
+            <version>42.2.6</version>
         </dependency>
+
 
         <!--slf4j-->
         <dependency>
