--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.9.9.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-rest-webmvc</artifactId>
+            <version>3.1.9.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
