Simple and dirty oauth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ db.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 db.hibernate.show_sql=true
 db.entitymanager.packages.to.scan=ua.iFood.entity
 db.hibernate.hbm2ddl.auto=create
+
+spring.security.oauth2.client.registration.google.client-id=361540362910-ss54ape1fd8rrh5sfd3dugh6hbg4arlr.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=8oqzcykqgMyjATOjR9-IPfSg
