--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ prod=true
 
 #DB properties
 db.driver=org.postgresql.Driver
-db.url=jdbc:postgresql://localhost:5432/iFood
+db.url=jdbc:postgresql://postgresdb:5432/iFood
 db.username=postgres
 db.password=postgres
 
