--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,12 @@
             <artifactId>spring-security-config</artifactId>
             <version>5.0.7.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
